# Axiom-Cli

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt
axion-core/: Cargo.toml
axion-core/src/: lib.rs  orchestrator.rs
python/: embedding_cache.json  embedding_model.py  llm_cache.json  llm_inference.py  memory.py  sovereign_cli.py  test_agent_caching.py  test_batching_cache.py  test_embedding_optimizations.py  test_singleton_llm.py
python/agents/: debug_agent.py  git_agent.py  llm_agent.py  planner_agent.py
